# dbt-translate

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  dbt_project.yml  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  publish_docs.yml
.github/workflows/: ci-pr.yml  publish-docs.yml  publish_docs.yml
docs/: hooks.py  index.md
docs/nav/development/: release-notes.md
integration_tests/: dbt_project.yml
integration_tests/macros/custom-tests/: test_expression_is_true.sql
integration_tests/models/: schema.yml  verify_money_to_words_en.sql
integration_tests/profiles/: profiles.yml
macros/: money_to_words.sql  money_to_words.yml
macros/compile/: compile_money_to_words.sql  compile_money_to_words_en.sql
macros/compile/snowflake/: snowflake_compile_money_to_words_en.sql
macros/compile/sqlserver/: sqlserver_compile_money_to_words_en.sql
