[tool.poetry]
name = "dbt-translate"
version = "0.1.0"
description = "✨ Helps to convert **Numbers** to **Words** ✨"
authors = ["datnguye <datnguyen.it09@gmail.com>"]
readme = "README.md"
packages = [{include = "dbt_translate"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "~1.3.0"
dbt-snowflake = "~1.3.0"
dbt-sqlserver = "~1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
hook_commit         = "pre-commit install --install-hooks"
hook_commit_msg     = "pre-commit install --hook-type commit-msg"
test_snowflake      = "dbt build --vars '{fresh_run: true}'--target snowflake"
test_sqlserver      = "dbt build --vars '{fresh_run: true}' --target sqlserver"