[tool.poetry]
name = "dbt-translate"
version = "1.0.0"
description = "✨ Helps to convert **Numbers** to **Words** ✨"
authors = ["datnguye <datnguyen.it09@gmail.com>"]
readme = "README.md"
packages = [{include = "dbt_translate"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "~1.3.0"
dbt-snowflake = "~1.3.0"
dbt-sqlserver = "~1.3.0"
pre-commit = "^3.2.1"
poethepoet = "^0.19.0"
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
hook_commit = "pre-commit install --install-hooks"
hook_commit_msg = "pre-commit install --hook-type commit-msg"
test_snowflake = "dbt build --target snowflake"
test_sqlserver = "dbt build --target sqlserver"